force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Required_By_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Required_By_Subscription__c</fullName>
    <formula>NULL</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required By Subscription</label>
    <type>Text</type>
</CustomField>