force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Restrict_Contract_Generation__c.field-meta.xml
<CustomField>
    <fullName>Restrict_Contract_Generation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator to identify to product if added, contract generation should not be allowed</description>
    <label>Restrict Contract Generation</label>
    <type>Checkbox</type>
</CustomField>