force-app/main/default/objects/SBQQ__QuoteLine__c/fields/S_No__c.field-meta.xml
<CustomField>
    <fullName>S_No__c</fullName>
    <label>Line No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>