force-app/main/default/objects/SBQQ__QuoteLine__c/fields/S_No_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>S_No_Read_Only__c</fullName>
    <formula>VALUE( S_No__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>S. No. (Read Only)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>