force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>Sale_Type__c</fullName>
    <description>TWIN Field from Product</description>
    <label>Sale Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZTAD</fullName>
                <label>Sale of Service</label>
            </value>
            <value>
                <fullName>ZTAN</fullName>
                <label>Sale of Equipment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>