force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SAP_Product_Price__c.field-meta.xml
<CustomField>
    <fullName>SAP_Product_Price__c</fullName>
    <label>SAP Product Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>