force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SCF_Validation_Count__c.field-meta.xml
<CustomField>
    <fullName>SCF_Validation_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SCF Validation Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>