force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Service_Level_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Service_Level_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Level Agreement</label>
    <type>Checkbox</type>
</CustomField>