force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>