force-app/main/default/objects/SBQQ__QuoteLine__c/fields/StartMonth__c.field-meta.xml
<CustomField>
    <fullName>StartMonth__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Start Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>