force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Subscription_Bill_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Bill_Start_Date__c</fullName>
    <label>Subscription Bill Start Date</label>
    <type>Date</type>
</CustomField>