force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Subscription_S_No__c.field-meta.xml
<CustomField>
    <fullName>Subscription_S_No__c</fullName>
    <formula>IF(
    Quote_Type__c != &apos;Quote&apos;,
    IF(
        Dimension_Name__c == &apos;OTC&apos;,
        IF(
            NOT( ISBLANK( SBQQ__RenewedAsset__c )),
            SBQQ__RenewedAsset__r.S_No__c, 
            IF(
                NOT( ISBLANK( SBQQ__UpgradedAsset__c )),
                SBQQ__UpgradedAsset__r.S_No__c,
                null
            )
        ),
        IF(
            ISBLANK( SBQQ__RenewedSubscription__c ),
            SBQQ__UpgradedSubscription__r.S_No__c,
            SBQQ__RenewedSubscription__r.S_No__c
        )
    ),
    null
)</formula>
    <label>Subscription S No.</label>
    <type>Text</type>
</CustomField>