force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Support_To_Customer__c.field-meta.xml
<CustomField>
    <fullName>Support_To_Customer__c</fullName>
    <formula>CASESAFEID( SBQQ__Quote__r.Support_To_Customer__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support To Customer</label>
    <type>Text</type>
</CustomField>