force-app/main/default/objects/SBQQ__QuoteLine__c/fields/sys_Dimension_Name__c.field-meta.xml
<CustomField>
    <fullName>sys_Dimension_Name__c</fullName>
    <description>Populated using Process Builder - SBQQ__Dimension__r.Name</description>
    <label>sys Dimension Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>