force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code__c</fullName>
    <formula>IF(TEXT(Business_Unit__c)=&quot;IN10&quot;,
   IF(TEXT(Sale_Type__c)=&quot;ZTAD&quot;,  
     CASE(TEXT( Location__c ),
                 &quot;IN14&quot; ,&quot;GST012&quot;, 
                 &quot;IN11&quot; ,&quot;GST012&quot;, 
                 &quot;IN12&quot; ,SBQQ__Product__r.SBQQ__TaxCode__c,                 
                 &quot;IN15&quot; , SBQQ__Product__r.SBQQ__TaxCode__c ,
                 &quot;IN16&quot; , SBQQ__Product__r.SBQQ__TaxCode__c ,
                 &quot;IN18&quot; , SBQQ__Product__r.SBQQ__TaxCode__c ,
                 &quot;I101&quot; , SBQQ__Product__r.SBQQ__TaxCode__c ,
                 &quot;Customer Site&quot;, SBQQ__Product__r.SBQQ__TaxCode__c,&quot;&quot;) ,

						
     CASE(TEXT( Location__c ),
                &quot;IN14&quot;, SBQQ__Product__r.SBQQ__TaxCode__c,
                &quot;IN11&quot; ,SBQQ__Product__r.SBQQ__TaxCode__c,
                &quot;IN12&quot;, SBQQ__Product__r.SBQQ__TaxCode__c,
                &quot;IN15&quot;, SBQQ__Product__r.SBQQ__TaxCode__c,
                &quot;IN16&quot;, SBQQ__Product__r.SBQQ__TaxCode__c,
                &quot;IN18&quot; , SBQQ__Product__r.SBQQ__TaxCode__c ,
                &quot;I101&quot; , SBQQ__Product__r.SBQQ__TaxCode__c ,
                &quot;Customer Site&quot; ,SBQQ__Product__r.SBQQ__TaxCode__c,&quot;&quot; ) )  , 

IF(TEXT(Sale_Type__c)=&quot;ZTAD&quot;,  
     CASE(TEXT( Location__c ),
                &quot;IN11&quot; ,SBQQ__Product__r.SBQQ__TaxCode__c,
                &quot;IN14&quot;, SBQQ__Product__r.SBQQ__TaxCode__c, 
                &quot;IN15&quot;, SBQQ__Product__r.SBQQ__TaxCode__c,  
                &quot;IN12&quot;, SBQQ__Product__r.SBQQ__TaxCode__c,
                &quot;IN16&quot;, SBQQ__Product__r.SBQQ__TaxCode__c,
	        &quot;IN18&quot; , SBQQ__Product__r.SBQQ__TaxCode__c ,
                &quot;I101&quot; , SBQQ__Product__r.SBQQ__TaxCode__c ,
                &quot;IN26&quot; , SBQQ__Product__r.SBQQ__TaxCode__c ,
                &quot;IN29&quot; , SBQQ__Product__r.SBQQ__TaxCode__c ,
                &quot;Customer Site&quot; , SBQQ__Product__r.SBQQ__TaxCode__c,&quot;&quot;)  , 

   CASE(TEXT( Location__c ),
                &quot;IN16&quot;, SBQQ__Product__r.SBQQ__TaxCode__c,
                &quot;IN14&quot;, SBQQ__Product__r.SBQQ__TaxCode__c,
                &quot;IN15&quot;, SBQQ__Product__r.SBQQ__TaxCode__c,
                &quot;Customer Site&quot; , SBQQ__Product__r.SBQQ__TaxCode__c,&quot;&quot;
) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Code</label>
    <type>Text</type>
</CustomField>