force-app/main/default/objects/SBQQ__QuoteLine__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <formula>TEXT(SBQQ__Product__r.Unit_of_Measurement__c)</formula>
    <label>UOM</label>
    <type>Text</type>
</CustomField>