force-app/main/default/objects/SBQQ__QuoteLine__c/fields/UomValue__c.field-meta.xml
<CustomField>
    <fullName>UomValue__c</fullName>
    <label>Uom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>