force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Upgraded_Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>Upgraded_Subscription_Id__c</fullName>
    <label>Upgraded Subscription Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>