force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Used_Contracted_Price__c.field-meta.xml
<CustomField>
    <fullName>Used_Contracted_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used Contracted Price</label>
    <type>Checkbox</type>
</CustomField>