force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Variable_Product_RO__c.field-meta.xml
<CustomField>
    <fullName>Variable_Product_RO__c</fullName>
    <formula>SBQQ__Product__r.Variable_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variable Product</label>
    <type>Checkbox</type>
</CustomField>