force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Variable_UOM__c.field-meta.xml
<CustomField>
    <fullName>Variable_UOM__c</fullName>
    <formula>TEXT( SBQQ__Product__r.Variable_UOM__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variable UOM</label>
    <type>Text</type>
</CustomField>