force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Bandwidth_Product_SCF_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Bandwidth_Product_SCF_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL( SBQQ__Quote__r.SBQQ__Type__c, &quot;Amendment&quot; ),
        ISPICKVAL( SBQQ__Quote__r.SBQQ__Type__c, &quot;Renewal&quot; )
    ),
    OR(
        ISPICKVAL( SBQQ__Quote__r.SCF_Type__c, &quot;Contract Line SCF&quot; ),
        ISPICKVAL( SBQQ__RequiredBy__r.SCF_Type__c, &quot;Transfer of Service&quot;) 
    ),
    OR(
        ISPICKVAL( SBQQ__RequiredBy__r.SCF_Type__c, &quot;Facility Change&quot;),
        ISPICKVAL( SBQQ__RequiredBy__r.SCF_Type__c, &quot;Transfer of Service&quot;) 
    ),
    NOT(ISBLANK(TEXT( Bandwidth_Type__c ))),
   !Variable_Product__c
)</errorConditionFormula>
    <errorMessage>Facility Change &amp; Transfer of Service are not allowed for Bandwidth Product</errorMessage>
</ValidationRule>