force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Business_Unit_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Business_Unit_Check</fullName>
    <active>true</active>
    <description>During SCF or Renewal, can only add product of same BU as of Contract</description>
    <errorConditionFormula>IF(
    AND(
        ISPICKVAL(SBQQ__Quote__r.SBQQ__Type__c, &apos;Amendment&apos;),
        ISNEW()
    ),
    IF(
        TEXT( Business_Unit__c ) != TEXT( SBQQ__Quote__r.SBQQ__Opportunity2__r.SBQQ__AmendedContract__r.Business_Unit__c ),
        TRUE,
        FALSE
    ),
    IF(
        AND(
            ISPICKVAL(SBQQ__Quote__r.SBQQ__Type__c, &apos;Renewal&apos;),
            ISNEW()
        ),
        IF(
            TEXT( Business_Unit__c ) != TEXT( SBQQ__Quote__r.SBQQ__Opportunity2__r.SBQQ__RenewedContract__r.Business_Unit__c ),
            TRUE,
            FALSE
        ),
        FALSE
    )
)</errorConditionFormula>
    <errorMessage>You are only allowed to add products of same Business Unit</errorMessage>
</ValidationRule>