force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Can_Only_SCF_Type_for_Amendment_Quote.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Only_SCF_Type_for_Amendment_Quote</fullName>
    <active>true</active>
    <description>Can only specify SCF Type for Amendment Quote</description>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL( SBQQ__Quote__r.SBQQ__Type__c, &quot;Amendment&quot;)),
    NOT(ISPICKVAL( SBQQ__Quote__r.SBQQ__Type__c, &quot;Renewal&quot;)),
    NOT(ISBLANK(TEXT( SCF_Type__c )))
)</errorConditionFormula>
    <errorMessage>Can only specify SCF Type for SCF Quote</errorMessage>
</ValidationRule>