force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Cancellation_is_not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_is_not_Allowed</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
   AND(
        ISPICKVAL( SBQQ__Quote__r.SBQQ__Type__c, &quot;Amendment&quot;),
        ISPICKVAL( SBQQ__Quote__r.SCF_Type__c, &quot;Contract Line SCF&quot;),
   
    NOT(ISBLANK( SBQQ__UpgradedSubscription__r.Technical_Start_Date__c )),
    OR(
        ISPICKVAL( SCF_Type__c, &quot;Cancellation&quot; ),
        ISPICKVAL( SBQQ__RequiredBy__r.SCF_Type__c , &quot;Cancellation&quot; )
    )
),
 AND(
        ISPICKVAL( SBQQ__Quote__r.SBQQ__Type__c, &quot;Renewal&quot;),
        ISPICKVAL( SBQQ__Quote__r.SCF_Type__c, &quot;Contract Line SCF&quot;),
         NOT(ISBLANK( SBQQ__RenewedSubscription__r.Technical_Start_Date__c )),
    OR(
        ISPICKVAL( SCF_Type__c, &quot;Cancellation&quot; ),
        ISPICKVAL( SBQQ__RequiredBy__r.SCF_Type__c , &quot;Cancellation&quot; )
       )
      ))</errorConditionFormula>
    <errorMessage>Cancellation is not allowed once technical dates are received</errorMessage>
</ValidationRule>