force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Cannot_Change_Bill_From.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Bill_From</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(Location__c, &apos;Customer Site&apos;)),
Bill_From_old__c &lt;&gt; TEXT(Bill_From__c),
ISBLANK(TEXT(Bill_From__c))
)</errorConditionFormula>
    <errorMessage>Bill From can Only be Changed for the Customer Site</errorMessage>
</ValidationRule>