force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Cannot_Update_Additional_Discount.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Update_Additional_Discount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(SBQQ__Quote__r.Technical_Approval_Status__c, &apos;Submitted for Approval&apos;) ,
    ISCHANGED( SBQQ__Discount__c )
)</errorConditionFormula>
    <errorMessage>You are not allowed to update Product Discounting</errorMessage>
</ValidationRule>