force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Cannot_Update_Quote_Line.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Update_Quote_Line</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( SBQQ__Quote__r.Term_Condition_Approval_Status__c , &apos;Submitted for Approval&apos;) ,
    NOT(ISCHANGED( LastModifiedDate ))
)</errorConditionFormula>
    <errorMessage>You are not allowed to update Quote Line</errorMessage>
</ValidationRule>