force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Cannot_Update_Quote_Line_post_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Update_Quote_Line_post_Approval</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(  SBQQ__Quote__r.SBQQ__Status__c , &apos;Approved&apos;) ,
        ISPICKVAL(  SBQQ__Quote__r.SBQQ__Status__c , &apos;Customer Accepted&apos;) ,
        ISPICKVAL(  SBQQ__Quote__r.SBQQ__Status__c , &apos;Customer Rejected&apos;) ,
        ISPICKVAL(  SBQQ__Quote__r.SBQQ__Status__c , &apos;Presented&apos;) 
    ),
    NOT(ISCHANGED( Bundle_Description__c ))
)</errorConditionFormula>
    <errorMessage>You are not allowed to update Quote once approved</errorMessage>
</ValidationRule>