force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Cannot_Update_Quote_Line_SCF.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Update_Quote_Line_SCF</fullName>
    <active>true</active>
    <description>Cannot update Quote Line if SCF Type is Address Change or Bill Cycle Change</description>
    <errorConditionFormula>AND(
 ISPICKVAL( SBQQ__Quote__r.SBQQ__Type__c, &quot;Amendment&quot;),
 OR(
  ISPICKVAL( SBQQ__Quote__r.SCF_Type__c, &quot;Address Change&quot;),
  ISPICKVAL( SBQQ__Quote__r.SCF_Type__c, &quot;Bill Cycle Change&quot;)
 ),
 OR(
  ISNEW(),
  ISCHANGED( SBQQ__Quantity__c ),
  ISCHANGED( Component_Quantity__c ),
  ISCHANGED( Final_Unit_Price__c ),
  AND(
   ISCHANGED( Final_Net_Price__c ),
   Dimension_Name__c &lt;&gt; &quot;OTC&quot;
  ),
  ISCHANGED( Location__c ),
  ISCHANGED( SBQQ__Optional__c ),
  ISCHANGED( SBQQ__Description__c ),
  ISCHANGED( Shipping_Address__c ),
  ISCHANGED( SCF_Type__c )
 )
)</errorConditionFormula>
    <errorMessage>Cannot create/update Quote Line if SCF Type is Address Change or Bill Cycle Change</errorMessage>
</ValidationRule>