force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Cannot_Update_Quote_Line_SCF_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Update_Quote_Line_SCF_Type</fullName>
    <active>false</active>
    <description>Cannot update Quote Line if SCF Type is blank on Quote Line</description>
    <errorConditionFormula>AND(
    NOT( ISPICKVAL( SBQQ__Quote__r.SBQQ__Type__c, &quot;Quote&quot;)),
    ISPICKVAL( SBQQ__Quote__r.SCF_Type__c, &quot;Contract Line SCF&quot;),
    AND(
        ISBLANK(TEXT( SCF_Type__c )),
        ISBLANK(TEXT( SBQQ__RequiredBy__r.SCF_Type__c ))
    ),
    OR(
        ISCHANGED( SBQQ__Quantity__c ),
        ISCHANGED( Component_Quantity__c ),
        ISCHANGED( Final_Unit_Price__c ),
        ISCHANGED( Final_Net_Price__c ),
        ISCHANGED( Location__c ),
        ISCHANGED( SBQQ__Optional__c ),
        ISCHANGED( SBQQ__Description__c ),
        ISCHANGED( Shipping_Address__c ),
        ISCHANGED( SCF_Type__c )
    )
)</errorConditionFormula>
    <errorMessage>No change can be made to the lines if SCF Type is not defined</errorMessage>
</ValidationRule>