force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Cannot_Update_Quote_Line_TOS_SCF.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Update_Quote_Line_TOS_SCF</fullName>
    <active>true</active>
    <description>Cannot update Quote Line if SCF Type is Transfer of Service</description>
    <errorConditionFormula>AND(
 ISPICKVAL( SBQQ__Quote__r.SBQQ__Type__c, &quot;Amendment&quot;),
 ISPICKVAL( SBQQ__Quote__r.SCF_Type__c, &quot;Transfer of Service&quot;),
 OR(
  ISNEW(),
  ISCHANGED( SBQQ__Quantity__c ),
  ISCHANGED( Component_Quantity__c ),
  ISCHANGED( Final_Unit_Price__c ),
  AND(
   ISCHANGED( Final_Net_Price__c ),
   Dimension_Name__c &lt;&gt; &quot;OTC&quot;
  ),
  ISCHANGED( Location__c ),
  ISCHANGED( SBQQ__Optional__c ),
  ISCHANGED( SBQQ__Description__c ),
  ISCHANGED( Shipping_Address__c ),
  AND(
   NOT(ISPICKVAL( SCF_Type__c, &quot;Transfer of Service&quot; )),
   NOT(ISBLANK(TEXT( SCF_Type__c )))
  )
 )
)</errorConditionFormula>
    <errorMessage>Cannot create/update Quote Line if SCF Type is Transfer of Service</errorMessage>
</ValidationRule>