force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Component_Qty_Cannot_be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Component_Qty_Cannot_be_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISBLANK( Component_Quantity__c ),
    NOT(ISBLANK( SBQQ__RequiredBy__c ))
)</errorConditionFormula>
    <errorMessage>Please specify Quantity/Volume</errorMessage>
</ValidationRule>