force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Description_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>(SBQQ__RequiredBy__r.SBQQ__Description__c  == null &amp;&amp;  SBQQ__Description__c  == null &amp;&amp; SBQQ__RequiredBy__c !=null)</errorConditionFormula>
    <errorMessage>Please add description on bundle.</errorMessage>
</ValidationRule>