force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Discount_Amt_cant_be_greater_than_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Amt_cant_be_greater_than_Price</fullName>
    <active>true</active>
    <description>Discount Amt cannot be greater than List Price</description>
    <errorConditionFormula>Discount_Amt__c &gt; SBQQ__ListPrice__c</errorConditionFormula>
    <errorMessage>Discount Amt cannot be greater than List Price</errorMessage>
</ValidationRule>