force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Facility_change_not_allowed_on_renewal.validationRule-meta.xml
<ValidationRule>
    <fullName>Facility_change_not_allowed_on_renewal</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( SBQQ__Quote__r.SBQQ__Type__c, &quot;Renewal&quot;),
ISPICKVAL( SBQQ__Quote__r.SCF_Type__c, &quot;Contract Line SCF&quot;),
ISPICKVAL( SCF_Type__c, &quot;Facility Change&quot;)
)</errorConditionFormula>
    <errorMessage>Facility Change is not allowed on Renewal Contract.</errorMessage>
</ValidationRule>