force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Location_in_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Location_in_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>(ISBLANK(Text( Location__c )) &amp;&amp; ISBLANK(SBQQ__RequiredBy__c))</errorConditionFormula>
    <errorMessage>Location is mandatory.</errorMessage>
</ValidationRule>