force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Only_Cancellation_for_Traded_Goods.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Cancellation_for_Traded_Goods</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( SBQQ__Quote__r.SBQQ__Type__c, &quot;Amendment&quot;),
    ISPICKVAL( SBQQ__Quote__r.SCF_Type__c, &quot;Contract Line SCF&quot;),
    SBQQ__ProductFamily__c == &apos;18&apos;,
    AND(    NOT(ISPICKVAL( SCF_Type__c , &quot;Cancellation&quot;)),
         NOT(ISPICKVAL( SCF_Type__c , &quot;New Line&quot;))
    ),
    NOT(ISBLANK(TEXT( SCF_Type__c )))
)</errorConditionFormula>
    <errorMessage>Only Cancellation is allowed for Traded Goods</errorMessage>
</ValidationRule>