force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Only_Cancellation_is_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Cancellation_is_Allowed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT( ISPICKVAL( SBQQ__Quote__r.SBQQ__Type__c, &quot;Quote&quot;)),
 ISPICKVAL( SBQQ__Quote__r.SCF_Type__c, &quot;Contract Line SCF&quot;),
 NOT(ISPICKVAL( SCF_Type__c , &quot;Cancellation&quot;)),
 NOT(ISBLANK(TEXT( SCF_Type__c ))),
 OR(
  AND(
   NOT(ISBLANK( SBQQ__UpgradedSubscription__c )),
   ISBLANK( SBQQ__UpgradedSubscription__r.Technical_Start_Date__c )
  ),
  AND(
   NOT(ISBLANK( SBQQ__RenewedSubscription__c )),
   ISBLANK( SBQQ__RenewedSubscription__r.Technical_Start_Date__c )
  )
 )
)</errorConditionFormula>
    <errorMessage>Only Cancellation is allowed in case technical start date is blank</errorMessage>
</ValidationRule>