force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Product_Location_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Location_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!CONTAINS(  SBQQ__Product__r.Location_Avalibility_for_Validation__c  , TEXT(Location__c)) &amp;&amp;
 !ISBLANK(TEXT(Location__c)),   OR(ISPICKVAL( SBQQ__Quote__r.SBQQ__Type__c, &apos;Quote&apos;),ISPICKVAL(SCF_Type__c, &apos;New Line&apos;)))</errorConditionFormula>
    <errorDisplayField>SBQQ__Discount__c</errorDisplayField>
    <errorMessage>The Product is not available on the selected location.</errorMessage>
</ValidationRule>